Fix responsiveness issue on mobile and hide borders on mobile/tablet

--- a/css/open-licence.css
+++ b/css/open-licence.css
@@ -68,9 +68,15 @@ padding:20px 20px 0px 80px;
     margin-left: 12px;
 }
 
+
+@media only screen and (min-width: 1010px) {
+    #license {
+        border-left: 4px solid #ccc;
+        border-right: 4px solid #ccc;
+    }
+}
+ 
 #license  {
-    border-left: 4px solid #ccc;
-    border-right: 4px solid #ccc;
     margin:0px auto;
     padding:0px 14px 100px 14px;
     max-width:960px;
